add tests, update models

--- a/models/staging/property_management/src_property_management.yml
+++ b/models/staging/property_management/src_property_management.yml
@@ -1,5 +1,5 @@
 version: 2
-  
+
 sources:
   - name: property_management
     database: raw
@@ -9,3 +9,7 @@ sources:
       - name: properties
       - name: rental_applications
       - name: units
+        loaded_at_field: uploaded_at
+        freshness:
+          warn_after: {count: 1, period: day}
+          error_after: {count: 2, period: day}
