fix relationships test syntax error

--- a/models/staging/property_management/stg_property_management.yml
+++ b/models/staging/property_management/stg_property_management.yml
@@ -48,6 +48,6 @@ models:
       - name: property_id
         description: Foreign key to stg_leases.unit_id
         tests:
-          - relationship:
-            to: ref('stg_leases')
-            field: unit_id
+          - relationships:
+              to: ref('stg_leases')
+              field: unit_id
